# GrowNN

./: .gitignore  .gitmodules  AUTHORS.md  CITATION.cff  LICENSE  Makefile  README.md  Readme.md  analyze_error.ipynb  changelog.md  file.py  nle.ttyrec3.bz2  pyproject.toml  requirements.txt  rl_training.err  rl_training.out  scipt.py  setup.py  slurm-3099890.out  slurm-3100116.out  slurm-37007.out  test-torch.py  visualize.ipynb
SMAC3/: CHANGELOG.md  CITATION.cff  README.md
SMAC3/docs/: 6_references.rst  7_glossary.rst  8_faq.rst  index.rst
SMAC3/smac/: __init__.py
approach/hps_grow_depth_once/: hpo_grow_once.py  hpo_grow_once_kissi.sh
approach/hps_grow_width_once/: hpo_grow_once.py  hpo_grow_once.sh  hpo_grow_once_kissi.sh
approach/net2deeper/: net2deeper.py  run_net2deeper.sh  run_net2deeper_kissi.sh
approach/net2wider/: net2wider.py  run_net2wider.sh  run_net2wider_kissi.sh
baselines/: blackbox_ppo.py  run_blackbock_ppo.sh
config/: database_credentials_placeholder.yaml
examples/: learn_with_ppo.ipynb
growing_with_experience/: blackbox_ppo.py
minihack/minihack/: base.py
minimal_working_example/: scenario.pkl
nle/: CITATION.cff  README.md
plotting/: deepcave_plots.ipynb  plot_grow_depth_once.ipynb  plot_grow_once.ipynb  plot_grow_wdith_once.ipynb  plot_trianing_process.ipynb  plot_trianing_process.py  plot_utils.py  render.py
py_experimenter/: AUTHORS.rst  CITATION.cff  LICENSE  README.md  pyproject.toml
py_experimenter/docs/source/: cite.rst  conf.py  help.rst  how-to-contribute.rst  index.rst  issues.rst  release-version.rst
py_experimenter/docs/source/examples/: example_conditional_grid.ipynb  example_general_usage.ipynb  example_logtables.ipynb
smac3_output/: sync_files.sh
ssh_files/: ##.sh  ai-n001.sh  ai-n002.sh  open_sshtunnel.py
stable-baselines3/: README.md
tests/: __init__.py  test_growing_with_experience.py  test_run_objective_function.py
utils/: __init__.py  environment_creations.py  hyperparameter_handling.py  plotting.py  py_experimenter_utils.py  smac_callbacks.py  smac_config_selector.py  stable_baseliens_callback.py  stable_baselines_callback.py
(+256 files in other folders)
