[tool.poetry]
name = "py-experimenter"
version = "1.4.2a1"
description = "The PyExperimenter is a tool for the automatic execution of experiments, e.g. for machine learning (ML), capturing corresponding results in a unified manner in a database."
authors = [
    "### ### <t.###@###>",
    "### ### <a.###@###>",
    "### ### <###.###@###>",
    "### ###",
    "### ### <h.###@###>",
    "### ### <###>",
    "######<###.###>",
    "### ### <###.###@###>"
]
license = "MIT"
readme = "README.md"
documentation = "https://###.github.io/py_experimenter/"
repository = "https://github.com/###/py_experimenter"
packages = [{include = "py_experimenter"}]
keywords = ["python", "experiments", "database", "executor"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.15"
pandas = ">=1.0"
jupyterlab = "^3.5.0"
joblib = "^1.2.0"
codecarbon = ">=2.2.1"
pymysql = "^1.0.3"
omegaconf = "^2.3.0"
sshtunnel = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
mock = ">=4.0"
sphinx = ">=5.0"
nbsphinx = "^0.8.9"
sphinx-gallery = "^0.11.1"
sphinx-autoapi = ">=2.0.0"
sphinx-rtd-theme = ">=1.0.0"
recommonmark = "^0.7.1"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
